<resources>
    <string name="app_name">KnpKonet</string>
    <string name="menu_icon" />
    <string name="mu7_text">네덜란드 헤이그에 있는 미술관. 1820년에 개관되었으며, 양적으로 많지는 않으나 전부 다 명작품으로 갖춰졌으며, 렘브란트의 투르프 박사의 해부학 강의, 안 페르메이르의 델프트의 조망, 진주귀걸이를 한 소녀등은 걸작중의 걸작으로 알려져 있다.</string>
    <string name="mu8_text">다양한 조형물과 유명한 조각상들이 전시되어있는 네덜란드 최고의 예술공원. 반고흐 미술관 다음으로 고흐의 작품을 많이 소장하고 있으며, 몬드리안의 작품도 감상 할 수 있는 곳.</string>
    <string name="mu9_text">130년전 네덜란드 헤양화가 월리암 메스닥의 설치 미술 작품, 팔각형 집을 지어 높이 14m, 총 둘레 120m에 달하는 천을 대어 그 위에 그린 헤이그의 바다 그림</string>
    <string name="mu3_text">네덜란드의 대표적인 화가인 렘브란트와 베르메르, 할스, 로이스 달 등과 15~19세기 거장들의 주요 작품이 전시되어 있으며, 렘브란트의 야경도 이곳에서 감상할 수 있다.</string>
    <string name="mu5_text">고흐 작품 이외에도 동시대 작가들인 폴 고갱과 툴루즈 로트렉등의 작품이 있으며 고흐가 존경했던 선배 화가인 밀레와 레옹 레르미트의 그림들도 있으며 이들은 주로 반 고흐의 동생들이 수집했던 작품들이다.</string>
    <string name="tourpro4_text">박람회 혹은 전시회 위주로 투어 프로그램을 구성하며 네덜란드의 대푲거인 원예 박람회, 프라이빗 라벨 전시회 등 다양한 이벤트들을 중심으로 하는 투어 프로그램</string>
    <string name="tourpro2_text">네덜란드 현지 전역을 돌아다니며 건축물에 관한 역사, 네덜란드 안의 유명 관광지 등 다양한 정보를 기반으로 하는 투어 프로그램</string>
    <string name="coordi2_text">네덜란드 현지에서 방문 목적과 방문지에 따른 기본 계획을 수립하고, 사전에 방문하려는 기업 또는 기관을 어레인지 하는 것을 의미합니다.</string>
</resources>