<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/imgbtn3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/menu" />

        <TextView
            android:id="@+id/mu1"
            android:layout_width="222dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="미술, 박물관 투어"
            android:textSize="20sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgmu1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/rijksmuseum" />

            <TextView
                android:id="@+id/mu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="국립 박물관 (Rijks museum)"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mu3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/mu3_text" />

            <ImageView
                android:id="@+id/imgmu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/gogh" />

            <TextView
                android:id="@+id/mu4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="반 고흐 미술관 (Van Gogh museum)" />

            <TextView
                android:id="@+id/mu5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/mu5_text" />

            <ImageView
                android:id="@+id/imgmu3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/lammuseum" />

            <TextView
                android:id="@+id/mu6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="마우리츠하우스 (Mauritshuis)" />

            <TextView
                android:id="@+id/mu7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/mu7_text" />

            <ImageView
            android:id="@+id/imgmu4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/park" />

            <TextView
                android:id="@+id/mu8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/mu8_text" />

            <ImageView
                android:id="@+id/imgmu5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ocean"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/mu9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="@string/mu9_text" />

            <ImageView
                android:id="@+id/imgmu6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/lammuseum"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/mu10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="렘브란트의 생가를 박물관으로 꾸며, 렘브란트의 애칭기술을 실습을 통하여 보여주며 설명" />


            <TextView
                android:id="@+id/mu11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:text="견적 문의" />

            <Button
                android:id="@+id/mubtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="문의하기"
                android:textSize="20sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="250dp">

                <Button
                    android:id="@+id/home3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="홈으로" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>